// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaipAccountSelectorList renders all accounts with balances 1`] = `
<RCTScrollView
  collapsable={false}
  data={
    [
      {
        "address": "0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "assets": {
          "fiatBalance": "$3200.00
1 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "isSelected": true,
        "name": "Account 1",
        "type": "HD Key Tree",
        "yOffset": 0,
      },
      {
        "address": "0xd018538C87232FF95acbCe4870629b75640a78E7",
        "assets": {
          "fiatBalance": "$6400.00
2 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xd018538C87232FF95acbCe4870629b75640a78E7",
        "isSelected": false,
        "name": "Account 2",
        "type": "HD Key Tree",
        "yOffset": 78,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  initialNumToRender={999}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="account-selector-list"
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#3c4d9d0f",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 1
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xC4955...4D272
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $3200.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 28,
                "justifyContent": "center",
                "opacity": 1,
                "width": 28,
              }
            }
            testID="multichain-account-cell-menu"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={20}
              name="MoreVertical"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 2
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xd0185...a78E7
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xd018538C87232FF95acbCe4870629b75640a78E7"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $6400.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 28,
                "justifyContent": "center",
                "opacity": 1,
                "width": 28,
              }
            }
            testID="multichain-account-cell-menu"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={20}
              name="MoreVertical"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`CaipAccountSelectorList renders all accounts with right accessory 1`] = `
<RCTScrollView
  collapsable={false}
  data={
    [
      {
        "address": "0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "assets": {
          "fiatBalance": "$3200.00
1 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "isSelected": true,
        "name": "Account 1",
        "type": "HD Key Tree",
        "yOffset": 0,
      },
      {
        "address": "0xd018538C87232FF95acbCe4870629b75640a78E7",
        "assets": {
          "fiatBalance": "$6400.00
2 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xd018538C87232FF95acbCe4870629b75640a78E7",
        "isSelected": false,
        "name": "Account 2",
        "type": "HD Key Tree",
        "yOffset": 78,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  initialNumToRender={999}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="account-selector-list"
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#3c4d9d0f",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 1
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xC4955...4D272
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    testID="right-accessory"
                  >
                    0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272 - Account 1
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 28,
                "justifyContent": "center",
                "opacity": 1,
                "width": 28,
              }
            }
            testID="multichain-account-cell-menu"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={20}
              name="MoreVertical"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 2
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xd0185...a78E7
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    testID="right-accessory"
                  >
                    0xd018538C87232FF95acbCe4870629b75640a78E7 - Account 2
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 28,
                "justifyContent": "center",
                "opacity": 1,
                "width": 28,
              }
            }
            testID="multichain-account-cell-menu"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={20}
              name="MoreVertical"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`CaipAccountSelectorList renders correctly 1`] = `
<RCTScrollView
  collapsable={false}
  data={
    [
      {
        "address": "0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "assets": {
          "fiatBalance": "$3200.00
1 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "isSelected": true,
        "name": "Account 1",
        "type": "HD Key Tree",
        "yOffset": 0,
      },
      {
        "address": "0xd018538C87232FF95acbCe4870629b75640a78E7",
        "assets": {
          "fiatBalance": "$6400.00
2 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xd018538C87232FF95acbCe4870629b75640a78E7",
        "isSelected": false,
        "name": "Account 2",
        "type": "HD Key Tree",
        "yOffset": 78,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  initialNumToRender={999}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="account-selector-list"
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#3c4d9d0f",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 1
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xC4955...4D272
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $3200.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 28,
                "justifyContent": "center",
                "opacity": 1,
                "width": 28,
              }
            }
            testID="multichain-account-cell-menu"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={20}
              name="MoreVertical"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 2
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xd0185...a78E7
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xd018538C87232FF95acbCe4870629b75640a78E7"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $6400.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 28,
                "justifyContent": "center",
                "opacity": 1,
                "width": 28,
              }
            }
            testID="multichain-account-cell-menu"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={20}
              name="MoreVertical"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`CaipAccountSelectorList renders network icons for accounts with transaction activity 1`] = `
<RCTScrollView
  collapsable={false}
  data={
    [
      {
        "address": "0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "assets": {
          "fiatBalance": "$3200.00
1 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272",
        "isSelected": true,
        "name": "Account 1",
        "type": "HD Key Tree",
        "yOffset": 0,
      },
      {
        "address": "0xd018538C87232FF95acbCe4870629b75640a78E7",
        "assets": {
          "fiatBalance": "$6400.00
2 ETH",
          "tokens": [],
        },
        "balanceError": undefined,
        "caipAccountId": "eip155:0:0xd018538C87232FF95acbCe4870629b75640a78E7",
        "isSelected": false,
        "name": "Account 2",
        "type": "HD Key Tree",
        "yOffset": 78,
      },
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  initialNumToRender={999}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  renderScrollComponent={[Function]}
  scrollEventThrottle={0.0001}
  stickyHeaderIndices={[]}
  testID="account-selector-list"
  viewabilityConfigCallbackPairs={[]}
>
  <View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#3c4d9d0f",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 1
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xC4955...4D272
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xC4955C0d639D99699Bfd7Ec54d9FaFEe40e4D272"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $3200.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 28,
                "justifyContent": "center",
                "opacity": 1,
                "width": 28,
              }
            }
            testID="multichain-account-cell-menu"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={20}
              name="MoreVertical"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onFocusCapture={[Function]}
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#ffffff",
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "opacity": 1,
              "padding": 16,
              "position": "relative",
              "zIndex": 1,
            }
          }
          testID="select-with-menu"
        >
          <View
            accessibilityRole="none"
            accessible={true}
            style={
              {
                "alignItems": "flex-start",
                "flexDirection": "column",
                "padding": 16,
                "paddingBottom": 0,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 0,
                "zIndex": 2,
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "opacity": 1,
                  }
                }
              >
                <View
                  style={
                    {
                      "backgroundColor": "#ffffff",
                      "borderRadius": 8,
                      "height": 32,
                      "marginRight": 16,
                      "overflow": "hidden",
                      "width": 32,
                    }
                  }
                  testID="cellbase-avatar"
                >
                  <View
                    style={
                      {
                        "height": 32,
                        "width": 32,
                      }
                    }
                  />
                </View>
                <View
                  style={
                    {
                      "alignItems": "flex-start",
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    accessibilityRole="text"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#121314",
                        "fontFamily": "Geist-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0,
                        "lineHeight": 24,
                      }
                    }
                    testID="cellbase-avatar-title"
                  >
                    Account 2
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "flex-start",
                        "flexDirection": "row",
                        "marginBottom": 0,
                        "zIndex": 1,
                      }
                    }
                  >
                    <Text
                      accessibilityRole="text"
                      numberOfLines={1}
                      style={
                        {
                          "color": "#686e7d",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                        }
                      }
                    >
                      0xd0185...a78E7
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    {
                      "marginLeft": 16,
                    }
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "flex-end",
                        "flexDirection": "column",
                      }
                    }
                    testID="account-balance-by-address-0xd018538C87232FF95acbCe4870629b75640a78E7"
                  >
                    <Text
                      accessibilityRole="text"
                      style={
                        {
                          "color": "#121314",
                          "fontFamily": "Geist-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0,
                          "lineHeight": 24,
                          "textAlign": "right",
                        }
                      }
                    >
                      $6400.00
                    </Text>
                    <View
                      style={
                        {
                          "marginTop": 4,
                        }
                      }
                      testID="network-container"
                    >
                      <View
                        style={
                          {
                            "alignItems": "center",
                            "flexDirection": "row",
                          }
                        }
                        testID="avatar-group-container"
                      />
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            {
              "paddingRight": 8,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 28,
                "justifyContent": "center",
                "opacity": 1,
                "width": 28,
              }
            }
            testID="multichain-account-cell-menu"
          >
            <SvgMock
              color="#121314"
              fill="currentColor"
              height={20}
              name="MoreVertical"
              style={
                {
                  "height": 20,
                  "width": 20,
                }
              }
              width={20}
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
